<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/registro_titulo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/scrollViewRegistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                tools:ignore="ExtraText">

                <TextView
                    android:id="@+id/tvNombreRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/nombre_registro"/>

                <EditText
                    android:id="@+id/editTextNombreRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_nombre_registro"
                    android:inputType="textEmailAddress"/>


                <TextView
                    android:id="@+id/textViewApellidoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:text="@string/apellido_registro"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_apellido_registro"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textViewTelefonoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/telefono_registro"/>

                <EditText
                    android:id="@+id/editTextTelefonoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:inputType="phone"
                    android:hint="@string/hint_telefono_registro"/>

                <TextView
                    android:id="@+id/textViewCorreoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/correo" />

                <EditText
                    android:id="@+id/editTextTextCorreoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_correo_registro"/>


                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/estado_registro" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_estado_registro"/>

                <TextView
                    android:id="@+id/textViewCiudadRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/ciudad_registro" />

                <EditText
                    android:id="@+id/editTextCiudadRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_ciudad_registro"/>

                <TextView
                    android:id="@+id/textViewColoniaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/colonia_registro" />

                <EditText
                    android:id="@+id/editTextColoniaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_colonia_registro"
                    />

                <TextView
                    android:id="@+id/textViewCPRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/codigo_postal_registro" />

                <EditText
                    android:id="@+id/editTextCPRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_codigo_postal_registro"/>

                <TextView
                    android:id="@+id/textViewCalleRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/calle_registro" />

                <EditText
                    android:id="@+id/editTextCalleRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_calle_registro"/>

                <TextView
                    android:id="@+id/textViewNumExtRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/numero_exterior_registro" />

                <EditText
                    android:id="@+id/editTextNumExtRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:hint="@string/hint_numero_exterior_registro"/>


                <TextView
                    android:id="@+id/textViewContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/contraseña" />

                <EditText
                    android:id="@+id/editTextContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="12dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:inputType="textPassword"
                    android:hint="@string/hint_contrasena_registro"/>

                <TextView
                    android:id="@+id/textViewConfirmarContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/mulish_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/contraseña" />

                <EditText
                    android:id="@+id/editTextConfirmarContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/borde_azul"
                    android:ems="10"
                    android:fontFamily="@font/mulish_bold"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirmar_contrasena"/>

                <Button
                    android:id="@+id/buttonRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/botones_azules"
                    android:fontFamily="@font/nunito_extrabold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/boton_registrar"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="50dp" />



            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>