<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/textoIniciarSesion"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_margin="30dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion"
            app:layout_constraintVertical_bias="0.75"
            app:srcCompat="@drawable/logo3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/correo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextCorreoLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/borde_azul"
            android:ems="10"
            android:fontFamily="@font/mulish_bold"
            android:hint="@string/ingresaCorreo"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/contraseña"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/borde_azul"
            android:ems="10"
            android:fontFamily="@font/mulish_bold"
            android:hint="@string/ingresaContraseña"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvOlvidasteContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/mulish_bold"
            android:gravity="end"
            android:text="@string/olvidaste_contrasena"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/botones_azules"
            android:fontFamily="@font/nunito_extrabold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/textoIngresar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/tvRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_extrabold"
            android:gravity="center"
            android:text="@string/textoRegistrarse"
            android:textColor="#5CBBF6"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>